--- a/starbucks_projekt/index.html
+++ b/starbucks_projekt/index.html
@@ -26,12 +26,45 @@
 
       <main class="container-fluid">
         <div class="row">
-          <aside class="col-sm-5 bg-info" style="">
+          <aside class="col-sm-5 bg-info" style="height: calc(100vh - 55px);">
             <div class="">Lorem, ipsum dolor.</div>
             <div class="">Magni, sequi voluptatibus.</div>
             <div class="">Recusandae, vel sapiente?</div>
           </aside>
+          <section class="col-sm-7">
+            <article class="card">
+              <h2>Article 1</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eius sit quisquam fugit dicta beatae perferendis in nulla aliquid aspernatur.</p>
+              <p>Velit quis iure sunt neque illo quo dolorem quasi similique expedita, culpa doloribus quos aspernatur recusandae natus sit cum autem.</p>
+              <p>Dolores quo aspernatur provident at ipsam eaque praesentium quas magnam totam tempora. Fuga cum quasi, rerum corrupti mollitia aut neque.</p>
+            </article>
+            <article class="card">
+              <h2>Article 2</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam cupiditate itaque tenetur suscipit maxime dicta ipsum possimus quas! Numquam, culpa.</p>
+              <p>Culpa provident totam aspernatur, possimus debitis veniam laudantium ratione dignissimos recusandae nesciunt est, mollitia soluta quaerat eaque laboriosam? Saepe, vel.</p>
+              <p>Quibusdam nihil incidunt magnam doloribus est, ut consequuntur velit eligendi at nulla, cumque omnis. Ipsum ab vero quam atque aliquid.</p>
+            </article>
+            <article class="card">
+              <h2>Article 3</h2>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel quia exercitationem facilis praesentium ullam voluptates nam illum blanditiis sint totam.</p>
+              <p>Animi incidunt sint in, ipsam dicta debitis dolorem consectetur velit corporis deserunt accusamus inventore porro illum a, ad fugit ipsa.</p>
+              <p>Perferendis qui rem saepe aut. Quibusdam minus ab vero, temporibus sed incidunt obcaecati? Odit dolores, expedita neque voluptatem libero aliquid!</p>
+            </article>
+            <article class="card">
+              <h2>Article 4</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque illum ad totam enim, ducimus optio fuga aliquid exercitationem quidem dolor?</p>
+              <p>Voluptate velit, magni praesentium tempore enim tempora reprehenderit cum debitis vero omnis exercitationem, sit atque. Obcaecati voluptates illum praesentium? Amet?</p>
+              <p>Excepturi inventore eos minima neque maxime qui quisquam, porro alias labore, ratione tempore ipsa tenetur ducimus animi tempora natus iste!</p>
+            </article>
+            <article class="card">
+              <h2>Article 5</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error facere autem quaerat voluptatem deleniti minima sit eligendi asperiores, ratione recusandae.</p>
+              <p>Eius, ipsa eum ullam soluta quos, magni dolorum necessitatibus, dicta reiciendis eos error. Commodi fuga dolorem rerum quas dicta veniam!</p>
+              <p>Sint excepturi pariatur optio fuga, corporis dolor veritatis illo ad necessitatibus illum saepe, mollitia est dolore explicabo odio. A, blanditiis.</p>
+            </article>
+          </section>
         </div>
+      
       </main>
 
 
