--- a/starbucks_projekt/index.html
+++ b/starbucks_projekt/index.html
@@ -26,41 +26,46 @@
 
       <main class="container-fluid">
         <div class="row">
-          <aside class="col-sm-5 bg-info" style="height: calc(100vh - 55px);">
+          <aside class="col-sm-5 bg-info sticky-top" style="height: calc(100vh - 60px); top:60px;">
             <div class="">Lorem, ipsum dolor.</div>
             <div class="">Magni, sequi voluptatibus.</div>
             <div class="">Recusandae, vel sapiente?</div>
           </aside>
-          <section class="col-sm-7">
-            <article class="card">
-              <h2>Article 1</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel eius sit quisquam fugit dicta beatae perferendis in nulla aliquid aspernatur.</p>
-              <p>Velit quis iure sunt neque illo quo dolorem quasi similique expedita, culpa doloribus quos aspernatur recusandae natus sit cum autem.</p>
-              <p>Dolores quo aspernatur provident at ipsam eaque praesentium quas magnam totam tempora. Fuga cum quasi, rerum corrupti mollitia aut neque.</p>
+          <section class="col-sm-7 mt-3 p-5">
+            <article class="mb-3">
+              <img src="https://www.starbucks.ch/sites/starbucks-ch/files/styles/c02_horizontal_card_1335x534/public/2024-02/3327%20CHAT%20AH%20Website%20banners%20-%20Homepage_HeroBanner_1335x534px_v01.jpg.webp?itok=I7c-6kHA" class="w-100" alt="">
             </article>
-            <article class="card">
-              <h2>Article 2</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam cupiditate itaque tenetur suscipit maxime dicta ipsum possimus quas! Numquam, culpa.</p>
-              <p>Culpa provident totam aspernatur, possimus debitis veniam laudantium ratione dignissimos recusandae nesciunt est, mollitia soluta quaerat eaque laboriosam? Saepe, vel.</p>
-              <p>Quibusdam nihil incidunt magnam doloribus est, ut consequuntur velit eligendi at nulla, cumque omnis. Ipsum ab vero quam atque aliquid.</p>
+            <article class="card mb-3">
+              <div class="card-body">
+                <h2>Article 2</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, consectetur? Ut eaque suscipit illum ducimus totam ullam animi reiciendis magnam.</p>
+                <p>Libero dolor reprehenderit molestias consequuntur eos est natus velit et quae autem, ullam repudiandae culpa nemo animi. Nulla, expedita veniam.</p>
+                <p>Repudiandae, facilis corrupti. Temporibus excepturi repudiandae voluptatum expedita harum ratione. Quasi odio rerum itaque, quisquam natus commodi ullam exercitationem iste?</p>
+              </div>
             </article>
-            <article class="card">
-              <h2>Article 3</h2>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel quia exercitationem facilis praesentium ullam voluptates nam illum blanditiis sint totam.</p>
-              <p>Animi incidunt sint in, ipsam dicta debitis dolorem consectetur velit corporis deserunt accusamus inventore porro illum a, ad fugit ipsa.</p>
-              <p>Perferendis qui rem saepe aut. Quibusdam minus ab vero, temporibus sed incidunt obcaecati? Odit dolores, expedita neque voluptatem libero aliquid!</p>
+            <article class="card mb-3">
+              <div class="card-body">
+                <h2>Article 3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis porro numquam maiores atque harum ipsum perspiciatis unde dignissimos voluptatum consectetur.</p>
+                <p>Quam minima soluta obcaecati, architecto corporis ad expedita delectus esse ex fugit, iure, incidunt accusamus assumenda illo numquam tempora repudiandae?</p>
+                <p>Fugit debitis, ipsa dicta, laudantium ex fugiat inventore quasi facere eum deserunt officiis placeat expedita fuga quod quos molestiae illum!</p>
+              </div>
             </article>
-            <article class="card">
-              <h2>Article 4</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque illum ad totam enim, ducimus optio fuga aliquid exercitationem quidem dolor?</p>
-              <p>Voluptate velit, magni praesentium tempore enim tempora reprehenderit cum debitis vero omnis exercitationem, sit atque. Obcaecati voluptates illum praesentium? Amet?</p>
-              <p>Excepturi inventore eos minima neque maxime qui quisquam, porro alias labore, ratione tempore ipsa tenetur ducimus animi tempora natus iste!</p>
+            <article class="card mb-3">
+              <div class="card-body">
+                <h2>Article 4</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis officiis adipisci eos id officia laudantium expedita quam iusto optio autem.</p>
+                <p>Suscipit ad, ducimus quod eum veniam consectetur ipsum molestias vel adipisci reiciendis? Iure laudantium qui minus libero ex labore totam!</p>
+                <p>Illo odit ratione iste ab eveniet impedit fugit, nostrum doloribus cupiditate nobis, aperiam accusamus explicabo hic eligendi ex, voluptatibus fugiat?</p>
+              </div>
             </article>
-            <article class="card">
-              <h2>Article 5</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error facere autem quaerat voluptatem deleniti minima sit eligendi asperiores, ratione recusandae.</p>
-              <p>Eius, ipsa eum ullam soluta quos, magni dolorum necessitatibus, dicta reiciendis eos error. Commodi fuga dolorem rerum quas dicta veniam!</p>
-              <p>Sint excepturi pariatur optio fuga, corporis dolor veritatis illo ad necessitatibus illum saepe, mollitia est dolore explicabo odio. A, blanditiis.</p>
+            <article class="card mb-3">
+              <div class="card-body">
+                <h2>Article 5</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto voluptatibus sequi ullam nostrum reprehenderit repudiandae ratione veritatis ea ipsum enim!</p>
+                <p>Sint, nihil optio! Dolorem, voluptas possimus fugiat animi amet error provident, molestiae, laudantium dicta facere eveniet voluptates suscipit quae nostrum.</p>
+                <p>Ipsa est quaerat, aliquid hic voluptate vel error, eligendi laudantium nobis omnis quam suscipit nostrum accusantium qui ad optio aut.</p>
+              </div>
             </article>
           </section>
         </div>
