--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -23,9 +23,9 @@
   <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-md">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><img src="img/CLARUSWAY_LOGO.png" alt="logo"></a>
         <button
           class="navbar-toggler"
           type="button"
