--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -40,26 +40,32 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              <a class="nav-link active" aria-current="page" href="#home">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link" href="#about">ABOUT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">STUDENTS</a>
+              <a class="nav-link" href="#students">STUDENTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">COURSES</a>
+              <a class="nav-link" href="#courses">COURSES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="#contact">CONTACT</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+
+
+
+
+
+
 
     <script src="lib/fslightbox.js"></script>
     <script
