--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -92,15 +92,22 @@
         <div class="carousel-item active">
           <img src="img/slider1.jpg" class="d-block w-100" alt="img1" />
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>Dream Job</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+            <div>
+              <button class="btn btn-danger">Start Now</button>
+              <button class="btn btn-warning">Register</button>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
           <img src="img/slider2.jpg" class="d-block w-100" alt="img2" />
           <div class="carousel-caption d-none d-md-block">
             <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <div>
+              <button class="btn btn-danger">Start Now</button>
+              <button class="btn btn-warning">Register</button>
+            </div>
           </div>
         </div>
         <div class="carousel-item">
@@ -108,6 +115,10 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Third slide label</h5>
             <p>Some representative placeholder content for the third slide.</p>
+            <div>
+              <button class="btn btn-danger">Start Now</button>
+              <button class="btn btn-warning">Register</button>
+            </div>
           </div>
         </div>
       </div>
