--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -104,6 +104,7 @@
           <img src="img/slider2.jpg" class="d-block w-100" alt="img2" />
           <div class="carousel-caption d-none d-sm-block">
             <h5>Succesful Future</h5>
+            <p>Some representative placeholder content for the third slide.</p>
             <div>
               <button class="btn btn-danger">Start Now</button>
               <button class="btn btn-warning">Register</button>
@@ -142,6 +143,11 @@
       </button>
     </div>
 
+
+
+
+
+    
     <script src="lib/fslightbox.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
