--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -143,11 +143,28 @@
       </button>
     </div>
 
+    <!-- About -->
+
+    <main class="text-center">
+      <section id="about" class="container bg-light p-3">
+        <h2 class="text-danger display-6">ABOUT US</h2>
+        <div class="row">
+          <div class="">
+            <i class="fas fa-globe-americas"></i>
+            <h4>Online Courses</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
 
 
 
-    
+
+
+
+
     <script src="lib/fslightbox.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
