--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -149,8 +149,8 @@
       <section id="about" class="container bg-light p-3">
         <h2 class="text-danger display-6">ABOUT US</h2>
         <div class="row">
-          <div class="">
-            <i class="fas fa-globe-americas"></i>
+          <div class="col-12 col-md-6 col-lg-4">
+            <i class="fas fa-globe-americas fa-2x"></i>
             <h4>Online Courses</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
           </div>
