--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -154,6 +154,17 @@
             <h4>Online Courses</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
           </div>
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-4">
+              <i class="fas fa-globe-americas fa-2x"></i>
+              <h4>Online Courses</h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
+            </div>        <div class="row">
+              <div class="col-12 col-md-6 col-lg-4">
+                <i class="fas fa-globe-americas fa-2x"></i>
+                <h4>Online Courses</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
+              </div>
         </div>
       </section>
     </main>
