--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -145,29 +145,38 @@
 
     <!-- About -->
 
+    <!-- ***** ABOUT ***** -->
     <main class="text-center">
       <section id="about" class="container bg-light p-3">
         <h2 class="text-danger display-6">ABOUT US</h2>
-        <div class="row">
-          <div class="col-12 col-md-6 col-lg-4">
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-lg-3">
+            <!--? icon büyüklüğünü fa-x özelliği ile ayarlayabiliriz  -->
             <i class="fas fa-globe-americas fa-2x"></i>
             <h4>Online Courses</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
+              modi assumenda ab. Rerum, sequi neque?
+            </p>
           </div>
-          <div class="row">
-            <div class="col-12 col-md-6 col-lg-4">
-              <i class="fas fa-globe-americas fa-2x"></i>
-              <h4>Online Courses</h4>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
-            </div>        <div class="row">
-              <div class="col-12 col-md-6 col-lg-4">
-                <i class="fas fa-globe-americas fa-2x"></i>
-                <h4>Online Courses</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus eligendi eum pariatur at in dicta placeat dolor vel facilis vitae.</p>
-              </div>
+          <div class="col-md-6 col-lg-6">
+            <i class="fas fa-headset fa-2x"></i>
+            <h4>FullTime Mentoring</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
+              modi assumenda ab. Rerum, sequi neque?
+            </p>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <i class="fas fa-book-open fa-2x"></i>
+            <h4>Learn Yourself</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
+              modi assumenda ab. Rerum, sequi neque?
+            </p>
+          </div>
         </div>
       </section>
-    </main>
 
 
 
