--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -155,24 +155,21 @@
             <i class="fas fa-globe-americas fa-2x"></i>
             <h4>Online Courses</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
-              modi assumenda ab. Rerum, sequi neque?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe rem placeat blanditiis nam impedit distinctio quae modi eum magnam maiores!
             </p>
           </div>
           <div class="col-md-6 col-lg-6">
             <i class="fas fa-headset fa-2x"></i>
             <h4>FullTime Mentoring</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
-              modi assumenda ab. Rerum, sequi neque?
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed magni id labore, tenetur fugit ea a dignissimos repellendus maxime tempore!
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <i class="fas fa-book-open fa-2x"></i>
             <h4>Learn Yourself</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia
-              modi assumenda ab. Rerum, sequi neque?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias porro quos totam, maiores deleniti quasi pariatur mollitia minima expedita doloribus.
             </p>
           </div>
         </div>
