--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -173,6 +173,10 @@
             </p>
           </div>
         </div>
+
+        <section id="instructors" class="container bg-dark p-3">
+          <h2 class="text-danger display-6">Our Instructors</h2>
+        </section>
       </section>
 
 
