--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -176,6 +176,11 @@
 
         <section id="instructors" class="container bg-dark p-3">
           <h2 class="text-danger display-6">Our Instructors</h2>
+          <div class="row ">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              
+            </div>
+          </div>
         </section>
       </section>
 
