--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -178,7 +178,14 @@
           <h2 class="text-danger display-6">Our Instructors</h2>
           <div class="row ">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-              
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
             </div>
           </div>
         </section>
