--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -178,12 +178,17 @@
           <h2 class="text-danger display-6">Our Instructors</h2>
           <div class="row ">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-              <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card">
+                <img src="img/teacher1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Josh Ren</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <div class="d-flex fa-2x justify-content-around">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-google-plus-square"></i>
+                  </div>
                 </div>
               </div>
             </div>
