--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -173,7 +173,7 @@
             </p>
           </div>
         </div>
-
+        <!-- Instructors -->
         <section id="instructors" class="container bg-dark p-3">
           <h2 class="text-danger display-6">Our Instructors</h2>
           <div class="row ">
