--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -178,8 +178,8 @@
           <h2 class="text-danger display-6">Our Instructors</h2>
           <div class="row ">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-              <div class="card">
-                <img src="img/teacher1.jpg" class="card-img-top" alt="...">
+              <div class="card h-100">
+                <img src="img/teacher1.jpg" class="card-img-top" alt="t1">
                 <div class="card-body">
                   <h5 class="card-title">Josh Ren</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
