--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -183,14 +183,88 @@
                 <div class="card-body">
                   <h5 class="card-title">Josh Ren</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="d-flex fa-2x justify-content-around">
+                  <div class="text-danger d-flex fa-2x justify-content-around ">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-              </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              <div class="card h-100">
+                <img src="img/teacher2.jpg" class="card-img-top" alt="t1">
+                <div class="card-body">
+                  <h5 class="card-title">Josh Ren</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-google-plus-square"></i>
+                  </div>
+                </div>
+                </div>
+            </div>            
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              <div class="card h-100">
+                <img src="img/teacher3.jpg" class="card-img-top" alt="t1">
+                <div class="card-body">
+                  <h5 class="card-title">Josh Ren</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-google-plus-square"></i>
+                  </div>
+                </div>
+                </div>
+            </div>            
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              <div class="card h-100">
+                <img src="img/teacher4.jpg" class="card-img-top" alt="t1">
+                <div class="card-body">
+                  <h5 class="card-title">Josh Ren</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-google-plus-square"></i>
+                  </div>
+                </div>
+                </div>
+            </div>            
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              <div class="card h-100">
+                <img src="img/teacher5.jpg" class="card-img-top" alt="t1">
+                <div class="card-body">
+                  <h5 class="card-title">Josh Ren</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-google-plus-square"></i>
+                  </div>
+                </div>
+                            </div>
+            </div>            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              <div class="card h-100">
+                <img src="img/teacher6.jpg" class="card-img-top" alt="t1">
+                <div class="card-body">
+                  <h5 class="card-title">Josh Ren</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-google-plus-square"></i>
+                  </div>
+                </div>
+                            </div>
             </div>
           </div>
         </section>
