--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -176,7 +176,7 @@
         <!-- Instructors -->
         <section id="instructors" class="container bg-dark p-3">
           <h2 class="text-danger display-6">Our Instructors</h2>
-          <div class="row ">
+          <div class="row g-3 justify-content-center">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
                 <img src="img/teacher1.jpg" class="card-img-top" alt="t1">
@@ -196,7 +196,7 @@
               <div class="card h-100">
                 <img src="img/teacher2.jpg" class="card-img-top" alt="t1">
                 <div class="card-body">
-                  <h5 class="card-title">Josh Ren</h5>
+                  <h5 class="card-title">Bob Marley</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <div class="text-danger d-flex fa-2x justify-content-around ">
                     <i class="fa-brands fa-facebook-square"></i>
@@ -211,7 +211,7 @@
               <div class="card h-100">
                 <img src="img/teacher3.jpg" class="card-img-top" alt="t1">
                 <div class="card-body">
-                  <h5 class="card-title">Josh Ren</h5>
+                  <h5 class="card-title">Jessica Sunny</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <div class="text-danger d-flex fa-2x justify-content-around ">
                     <i class="fa-brands fa-facebook-square"></i>
@@ -226,7 +226,7 @@
               <div class="card h-100">
                 <img src="img/teacher4.jpg" class="card-img-top" alt="t1">
                 <div class="card-body">
-                  <h5 class="card-title">Josh Ren</h5>
+                  <h5 class="card-title">Jonny Came</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <div class="text-danger d-flex fa-2x justify-content-around ">
                     <i class="fa-brands fa-facebook-square"></i>
@@ -241,7 +241,7 @@
               <div class="card h-100">
                 <img src="img/teacher5.jpg" class="card-img-top" alt="t1">
                 <div class="card-body">
-                  <h5 class="card-title">Josh Ren</h5>
+                  <h5 class="card-title">Osho</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <div class="text-danger d-flex fa-2x justify-content-around ">
                     <i class="fa-brands fa-facebook-square"></i>
@@ -255,7 +255,7 @@
               <div class="card h-100">
                 <img src="img/teacher6.jpg" class="card-img-top" alt="t1">
                 <div class="card-body">
-                  <h5 class="card-title">Josh Ren</h5>
+                  <h5 class="card-title">Brandon White</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <div class="text-danger d-flex fa-2x justify-content-around ">
                     <i class="fa-brands fa-facebook-square"></i>
@@ -264,7 +264,7 @@
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                            </div>
+                 </div>
             </div>
           </div>
         </section>
