--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -151,25 +151,30 @@
         <h2 class="text-danger display-6">ABOUT US</h2>
         <div class="row justify-content-center">
           <div class="col-md-6 col-lg-3">
-
             <i class="fas fa-globe-americas fa-2x"></i>
             <h4>Online Courses</h4>
             <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe rem placeat blanditiis nam impedit distinctio quae modi eum magnam maiores!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe
+              rem placeat blanditiis nam impedit distinctio quae modi eum magnam
+              maiores!
             </p>
           </div>
           <div class="col-md-6 col-lg-6">
             <i class="fas fa-headset fa-2x"></i>
             <h4>FullTime Mentoring</h4>
             <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed magni id labore, tenetur fugit ea a dignissimos repellendus maxime tempore!
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed
+              magni id labore, tenetur fugit ea a dignissimos repellendus maxime
+              tempore!
             </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <i class="fas fa-book-open fa-2x"></i>
             <h4>Learn Yourself</h4>
             <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias porro quos totam, maiores deleniti quasi pariatur mollitia minima expedita doloribus.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+              porro quos totam, maiores deleniti quasi pariatur mollitia minima
+              expedita doloribus.
             </p>
           </div>
         </div>
@@ -179,98 +184,136 @@
           <div class="row g-3 justify-content-center">
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
-                <img src="img/teacher1.jpg" class="card-img-top" alt="t1">
+                <img src="img/teacher1.jpg" class="card-img-top" alt="t1" />
                 <div class="card-body">
                   <h5 class="card-title">Josh Ren</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <div class="text-danger d-flex fa-2x justify-content-around">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                </div>
+              </div>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
-                <img src="img/teacher2.jpg" class="card-img-top" alt="t1">
+                <img src="img/teacher2.jpg" class="card-img-top" alt="t1" />
                 <div class="card-body">
                   <h5 class="card-title">Bob Marley</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <div class="text-danger d-flex fa-2x justify-content-around">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                </div>
-            </div>            
+              </div>
+            </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
-                <img src="img/teacher3.jpg" class="card-img-top" alt="t1">
+                <img src="img/teacher3.jpg" class="card-img-top" alt="t1" />
                 <div class="card-body">
                   <h5 class="card-title">Jessica Sunny</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <div class="text-danger d-flex fa-2x justify-content-around">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                </div>
-            </div>            
+              </div>
+            </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
-                <img src="img/teacher4.jpg" class="card-img-top" alt="t1">
+                <img src="img/teacher4.jpg" class="card-img-top" alt="t1" />
                 <div class="card-body">
                   <h5 class="card-title">Jonny Came</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <div class="text-danger d-flex fa-2x justify-content-around">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                </div>
-            </div>            
+              </div>
+            </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
-                <img src="img/teacher5.jpg" class="card-img-top" alt="t1">
+                <img src="img/teacher5.jpg" class="card-img-top" alt="t1" />
                 <div class="card-body">
                   <h5 class="card-title">Osho</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <div class="text-danger d-flex fa-2x justify-content-around">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                            </div>
-            </div>            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
               <div class="card h-100">
-                <img src="img/teacher6.jpg" class="card-img-top" alt="t1">
+                <img src="img/teacher6.jpg" class="card-img-top" alt="t1" />
                 <div class="card-body">
                   <h5 class="card-title">Brandon White</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <div class="text-danger d-flex fa-2x justify-content-around ">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <div class="text-danger d-flex fa-2x justify-content-around">
                     <i class="fa-brands fa-facebook-square"></i>
                     <i class="fa-brands fa-instagram-square"></i>
                     <i class="fa-brands fa-twitter-square"></i>
                     <i class="fa-brands fa-google-plus-square"></i>
                   </div>
                 </div>
-                 </div>
+              </div>
             </div>
           </div>
         </section>
       </section>
 
-   <script src="lib/fslightbox.js"></script>
+      <section id="students" class="container bg-light p-3">
+        <h2 class="display-6 text-danger">Our Students</h2>
+        <div class="row">
+          <div class="col">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
+              laborum quia voluptate fugit et ut ratione, modi itaque cum
+              distinctio perferendis repellendus, nostrum molestiae nam
+              explicabo qui? Incidunt, quam similique.
+            </p>
+            <button class="btn btn-danger">Learn More</button>
+          </div>
+          <div class="col">
+            <img src="img/students1.png" alt="students">
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <script src="lib/fslightbox.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
