--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -297,7 +297,7 @@
       <section id="students" class="container bg-light p-3">
         <h2 class="display-6 text-danger">Our Students</h2>
         <div class="row">
-          <div class="col">
+          <div class="col-md-6">
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
               laborum quia voluptate fugit et ut ratione, modi itaque cum
@@ -306,7 +306,7 @@
             </p>
             <button class="btn btn-danger">Learn More</button>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <img src="img/students1.png" alt="students">
           </div>
         </div>
