--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -296,7 +296,7 @@
 
       <section id="students" class="container bg-light p-3">
         <h2 class="display-6 text-danger">Our Students</h2>
-        <div class="row">
+        <div class="row flex-wrap-reverse align-items-center">
           <div class="col-md-6">
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse
@@ -307,7 +307,7 @@
             <button class="btn btn-danger">Learn More</button>
           </div>
           <div class="col-md-6">
-            <img src="img/students1.png" alt="students">
+            <img src="img/students1.png" alt="students" />
           </div>
         </div>
       </section>
