--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -311,6 +311,10 @@
           </div>
         </div>
       </section>
+
+      <section id="courses" class="container bg-light p-3">
+
+      </section>
     </main>
 
     <script src="lib/fslightbox.js"></script>
