--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -328,7 +328,7 @@
               aria-controls="pills-home"
               aria-selected="true"
             >
-              Home
+              Full-stack
             </button>
           </li>
           <li class="nav-item" role="presentation">
@@ -342,7 +342,7 @@
               aria-controls="pills-profile"
               aria-selected="false"
             >
-              Profile
+              Data-Science
             </button>
           </li>
           <li class="nav-item" role="presentation">
@@ -356,11 +356,11 @@
               aria-controls="pills-contact"
               aria-selected="false"
             >
-              Contact
+              Devops
             </button>
           </li>
         </ul>
-        <div class="tab-content" id="pills-tabContent">
+        <div class="tab-content text-light" id="pills-tabContent">
           <div
             class="tab-pane fade show active"
             id="pills-home"
@@ -384,15 +384,6 @@
             id="pills-contact"
             role="tabpanel"
             aria-labelledby="pills-contact-tab"
-            tabindex="0"
-          >
-            ...
-          </div>
-          <div
-            class="tab-pane fade"
-            id="pills-disabled"
-            role="tabpanel"
-            aria-labelledby="pills-disabled-tab"
             tabindex="0"
           >
             ...
