--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -368,7 +368,7 @@
             aria-labelledby="pills-home-tab"
             tabindex="0"
           >
-            ...
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ducimus corporis quasi tenetur accusamus nam beatae reprehenderit pariatur nulla quos!
           </div>
           <div
             class="tab-pane fade"
@@ -377,7 +377,7 @@
             aria-labelledby="pills-profile-tab"
             tabindex="0"
           >
-            ...
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla accusantium ipsam architecto in, cum obcaecati labore sit beatae magni nam!
           </div>
           <div
             class="tab-pane fade"
@@ -386,7 +386,7 @@
             aria-labelledby="pills-contact-tab"
             tabindex="0"
           >
-            ...
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae praesentium ea itaque natus hic repellat! Et tenetur amet officiis minus.
           </div>
         </div>
       </section>
