--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -368,7 +368,44 @@
             aria-labelledby="pills-home-tab"
             tabindex="0"
           >
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ducimus corporis quasi tenetur accusamus nam beatae reprehenderit pariatur nulla quos!
+            <div class="row">
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/fs1.jpg">
+                  <img
+                    src="img/thumbnail/fs1.jpg"
+                    class="img-thumbnail"
+                    alt="fs1"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/fs2.jpg">
+                  <img
+                    src="img/thumbnail/fs2.jpg"
+                    class="img-thumbnail"
+                    alt="fs2"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/fs3.jpg">
+                  <img
+                    src="img/thumbnail/fs3.jpg"
+                    class="img-thumbnail"
+                    alt="fs3"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6 col-lg-3">
+                <a data-fslightbox href="img/thumbnail/fs4.jpg">
+                  <img
+                    src="img/thumbnail/fs4.jpg"
+                    class="img-thumbnail"
+                    alt="fs4"
+                  />
+                </a>
+              </div>
+            </div>
           </div>
           <div
             class="tab-pane fade"
@@ -377,7 +414,7 @@
             aria-labelledby="pills-profile-tab"
             tabindex="0"
           >
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla accusantium ipsam architecto in, cum obcaecati labore sit beatae magni nam!
+            ...
           </div>
           <div
             class="tab-pane fade"
@@ -386,7 +423,7 @@
             aria-labelledby="pills-contact-tab"
             tabindex="0"
           >
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae praesentium ea itaque natus hic repellat! Et tenetur amet officiis minus.
+            ...
           </div>
         </div>
       </section>
