--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -414,7 +414,44 @@
             aria-labelledby="pills-profile-tab"
             tabindex="0"
           >
-            ...
+          <div class="row">
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ds1.jpg">
+                <img
+                  src="img/thumbnail/ds1.jpg"
+                  class="img-thumbnail"
+                  alt="ds1"
+                />
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ds2.jpg">
+                <img
+                  src="img/thumbnail/ds2.jpg"
+                  class="img-thumbnail"
+                  alt="ds2"
+                />
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ds3.jpg">
+                <img
+                  src="img/thumbnail/ds3.jpg"
+                  class="img-thumbnail"
+                  alt="ds3"
+                />
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ds4.jpg">
+                <img
+                  src="img/thumbnail/ds4.jpg"
+                  class="img-thumbnail"
+                  alt="ds4"
+                />
+              </a>
+            </div>
+          </div>
           </div>
           <div
             class="tab-pane fade"
@@ -423,7 +460,44 @@
             aria-labelledby="pills-contact-tab"
             tabindex="0"
           >
-            ...
+          <div class="row">
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ops1.jpg">
+                <img
+                  src="img/thumbnail/ops1.jpg"
+                  class="img-thumbnail"
+                  alt="ops1"
+                />
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ops2.jpg">
+                <img
+                  src="img/thumbnail/ops2.jpg"
+                  class="img-thumbnail"
+                  alt="ops2"
+                />
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ops3.jpg">
+                <img
+                  src="img/thumbnail/ops3.jpg"
+                  class="img-thumbnail"
+                  alt="ops3"
+                />
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-3">
+              <a data-fslightbox href="img/thumbnail/ops4.jpg">
+                <img
+                  src="img/thumbnail/ops4.jpg"
+                  class="img-thumbnail"
+                  alt="ops4"
+                />
+              </a>
+            </div>
+          </div>
           </div>
         </div>
       </section>
