--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -368,7 +368,7 @@
             aria-labelledby="pills-home-tab"
             tabindex="0"
           >
-            <div class="row">
+            <div class="row g-2">
               <div class="col-md-6 col-lg-3">
                 <a data-fslightbox href="img/thumbnail/fs1.jpg">
                   <img
@@ -414,7 +414,7 @@
             aria-labelledby="pills-profile-tab"
             tabindex="0"
           >
-          <div class="row">
+          <div class="row g-2">
             <div class="col-md-6 col-lg-3">
               <a data-fslightbox href="img/thumbnail/ds1.jpg">
                 <img
@@ -460,7 +460,7 @@
             aria-labelledby="pills-contact-tab"
             tabindex="0"
           >
-          <div class="row">
+          <div class="row g-2">
             <div class="col-md-6 col-lg-3">
               <a data-fslightbox href="img/thumbnail/ops1.jpg">
                 <img
