--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -569,8 +569,16 @@
             </div>
           </form>
         </article>
-        <article id="location">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114076.74292200238!2d-80.12211497038031!3d26.683737563097647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d8d6f618523787%3A0x3ba092c7d7a6471a!2sPalm%20Beach%2C%20Florida%2C%20USA!5e0!3m2!1sde!2sch!4v1712487319611!5m2!1sde!2sch" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <article id="location" class="mt-4">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d114076.74292200238!2d-80.12211497038031!3d26.683737563097647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d8d6f618523787%3A0x3ba092c7d7a6471a!2sPalm%20Beach%2C%20Florida%2C%20USA!5e0!3m2!1sde!2sch!4v1712487319611!5m2!1sde!2sch"
+            width="100%"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </article>
       </section>
     </main>
