--- a/projekt_clarusway/index.html
+++ b/projekt_clarusway/index.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="css/app.css" />
   </head>
-  <body>
+  <body id="body">
     <!-- Navbar -->
 
     <nav class="navbar navbar-expand-md">
@@ -599,6 +599,11 @@
         Copyright by YasinKereci
       </div>
     </footer>
+    <!-- UP Button -->
+    <a class="btn-up" href="#body">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+
 
     <script src="lib/fslightbox.js"></script>
     <script
